# wasm-renderer-rust

./: .gitignore  Cargo.toml  package.json
src/: lib.rs
src/engine/: raster.rs  ruster.rs
src/geometry/: matrix.rs  point.rs
src/geometry/three_d/: cube.rs
src/geometry/two_d/: triangle.rs
web/: index.html  main.js  package-lock.json  package.json  style.css
