[package]
authors = ["Andrea Mangione <35958935+MangioneAndrea@users.noreply.github.com>"]
edition = "2018"
name = "wasm-renderer"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1.6", optional = true}
js-sys = "0.3.57"
wasm-bindgen = "0.2.80"
wee_alloc = {version = "0.4.5", optional = true}
num-traits = "0.2"
log = "0.4.6"
wasm-logger = "0.2.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
  'ImageData',
]
version = "0.3.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[target.wasm32-unknown-unknown]
rustflags = [
  "-C", "link-args=-z stack-size=15000000",
]